--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<login-template [options]="options"></login-template>
+<login-template [options]="options" (onSubmit)="onSubmit($event)"></login-template>
